--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.27",
-    "eslint": "8.0.0",
+    "eslint": "^8.0.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.4.1",
