--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.24.0",
+    "@types/react-scroll": "^1.8.3",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
