--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@types/react-scroll": "^1.8.3",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-scroll": "^1.8.4"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
