--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-easy-flip": "^4.0.0-beta.2",
     "react-scroll": "^1.8.4"
   },
   "devDependencies": {
