--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-easy-flip": "^4.0.0-beta.2",
-    "react-scroll": "^1.8.4"
+    "react-scroll": "^1.8.4",
+    "scroll-behavior-polyfill": "^2.0.13"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
