--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/react-scroll": "^1.8.3",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
+    "react-modal-hook": "^3.0.0",
     "react-scroll": "^1.8.4",
     "scroll-behavior-polyfill": "^2.0.13"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
+    "@types/react-dom": "^17.0.10",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "^8.0.0",
     "eslint-config-next": "^11.1.2",
