--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^1.24.0",
     "@types/react-scroll": "^1.8.3",
     "next": "11.1.2",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-modal-hook": "^3.0.0",
