--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@supabase/supabase-js": "^1.24.0",
     "@types/react-scroll": "^1.8.3",
     "next": "11.1.2",
-    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-modal-hook": "^3.0.0",
@@ -22,6 +21,7 @@
     "scroll-behavior-polyfill": "^2.0.13"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.1",
     "@types/react": "17.0.27",
     "@types/react-dom": "^17.0.10",
     "babel-plugin-inline-react-svg": "^2.0.1",
