--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.24.0",
     "@types/react-scroll": "^1.8.3",
+    "firebase": "^9.4.1",
+    "firebase-admin": "^10.0.0",
     "next": "11.1.2",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-modal-hook": "^3.0.0",
@@ -21,7 +24,6 @@
     "scroll-behavior-polyfill": "^2.0.13"
   },
   "devDependencies": {
-    "@types/cookie": "^0.4.1",
     "@types/react": "17.0.27",
     "@types/react-dom": "^17.0.10",
     "babel-plugin-inline-react-svg": "^2.0.1",
