--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/pickers": "^3.3.10",
     "@supabase/supabase-js": "^1.24.0",
     "@types/react-scroll": "^1.8.3",
-    "firebase": "^9.4.1",
+    "date-fns": "^2.26.0",
+    "firebase": "^9.5.0",
     "firebase-admin": "^10.0.0",
     "next": "11.1.2",
+    "nodemailer": "^6.7.1",
     "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
@@ -24,6 +29,7 @@
     "scroll-behavior-polyfill": "^2.0.13"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.27",
     "@types/react-dom": "^17.0.10",
     "babel-plugin-inline-react-svg": "^2.0.1",
