--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-modal-hook": "^3.0.0",
+    "react-papaparse": "^3.18.2",
     "react-scroll": "^1.8.4",
     "scroll-behavior-polyfill": "^2.0.13"
   },
