--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^4.12.3",
     "@supabase/supabase-js": "^1.24.0",
     "@types/react-scroll": "^1.8.3",
+    "canvas": "^2.6.1",
     "next": "11.1.2",
     "nodemailer": "^6.7.1",
     "nookies": "^2.5.2",
