--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@supabase/supabase-js": "^1.24.0",
     "@types/react-scroll": "^1.8.3",
     "canvas": "^2.6.1",
+    "chrome-aws-lambda": "^9.1.0",
     "next": "11.1.2",
     "nodemailer": "^6.7.1",
     "nookies": "^2.5.2",
+    "puppeteer-core": "^9.1.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-modal-hook": "^3.0.0",
