--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.12.3",
     "@supabase/supabase-js": "^1.24.0",
     "@types/react-scroll": "^1.8.3",
+    "axios": "^0.25.0",
     "canvas": "2.6.1",
     "chrome-aws-lambda": "^9.1.0",
     "next": "11.1.2",
@@ -23,6 +24,7 @@
     "puppeteer-core": "^9.1.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha-v3": "^1.9.7",
     "react-modal-hook": "^3.0.0",
     "react-papaparse": "^3.18.2",
     "react-scroll": "^1.8.4",
