--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@supabase/supabase-js": "^1.24.0",
+    "@types/qs": "^6.9.7",
     "@types/react-scroll": "^1.8.3",
     "axios": "^0.25.0",
     "canvas": "2.6.1",
