--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
     "@supabase/supabase-js": "^1.24.0",
     "@types/react-scroll": "^1.8.3",
     "axios": "^0.25.0",
@@ -21,7 +20,6 @@
     "next": "11.1.2",
     "nodemailer": "^6.7.1",
     "nookies": "^2.5.2",
-    "puppeteer-core": "^9.1.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha-v3": "^1.9.7",
@@ -34,10 +32,13 @@
     "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.27",
     "@types/react-dom": "^17.0.10",
+    "autoprefixer": "^10.4.2",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "postcss": "^8.4.5",
     "prettier": "^2.4.1",
+    "tailwindcss": "^3.0.16",
     "typescript": "4.4.3"
   },
   "prettier": {
